# zipbyul

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
admin/: index.html  nginx.conf
api/: Dockerfile  README.md  build.gradle  settings.gradle
collector/: .dockerignore  Dockerfile  README.md  collect.py  poc_fetch.py  pyproject.toml
collector/fixtures/: applyhome_apt.json  applyhome_unranked.json  ecos_base_rate.json  ecos_csi.json  lh_notice.json  lh_notice_dtl.json  molit_apt_trade.json
collector/src/jipbyul_collector/adapters/: applyhome.py  base.py  ecos.py  lh.py  molit.py
collector/src/jipbyul_collector/common/: db.py  settings.py
collector/src/jipbyul_collector/normalize/: announcement.py  announcement_unit.py  calendar.py  market_index.py  transaction.py
collector/tests/: conftest.py  test_calendar.py  test_manual_announcement_drain.py  test_mappings.py
contracts/: README.md  enums.yaml  openapi.yaml
db/: README.md
db/migration/: V10__margin_matching.sql  V11__presale_source.sql  V12__admin_policy_event.sql  V13__manual_announcement_queue.sql  V14__webpush_subscription.sql  V15__applyhome_pblpvtrent_source.sql  V16__user_watch_complexes.sql  V17__transaction_detail_columns.sql  V18__transaction_monthly_rent.sql  V19__watch_region_priority.sql  V1__init_schema.sql  V2__seed_sources_regions.sql  V3__seed_region_dong.sql  V4__domain_event_dedup_unique.sql  (+5 more)
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
(+144 files in other folders)
